--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+*{
+  margin: 0%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,34 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+/* custom css */
+
+.searchBox-enter{
+  position: fixed;
+  margin-top: -5vh;
+}
+.searchBox-enter-active{
+  margin-top: 0vh;
+  transition:all 1000ms;
+}
+
+.searchBox-enter-done{
+  position: fixed;
+  margin-top: 0vh;
+}
+
+.searchBox-exit{
+  position: fixed;
+  margin-top: 0vh;
+}
+.searchBox-exit-active{
+  margin-top: -10vh;
+  transition: all 500ms;
+}
+.searchBox-exit-done{
+  position: fixed;
+  margin-top: -10vh;
 }
